Small documentation update
Signed-off-by: Gergely Nagy <algernon@madhouse-project.org>

--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=KbdTapDance
 version=0.1.0
 author=Gergely Nagy
 maintainer=Gergely Nagy <arduino@gergo.csillger.hu>
-sentence=Tap-Dance for keyboards.
+sentence=Multi-use keys for arduino-based keyboards.
 paragraph=Multi-use keys for arduino-based keyboards.
 category=Communication
 url=https://github.com/algernon/arduino-kbd-tap-dance
